fix: Material Icon width jumps while loading

--- a/src/scss/components/Icon.scss
+++ b/src/scss/components/Icon.scss
@@ -1,4 +1,5 @@
 .icon {
+  display: inline-block;
   width: 1em;
   font-style: normal;
   font-weight: normal;
